# FormicaX

./: .cursorrules  .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  README.md  TRADING_GUIDE.md
examples/: affinity_propagation_basic.rs  csv_loading_examples.rs  dbscan_basic.rs  gmm_basic.rs  hierarchical_basic.rs  kmeans_basic.rs  performance_monitor.rs  som_basic.rs  trading_signals.rs  vwap_session.rs  vwap_strategy.rs
examples/csv/: daily.csv  daily_without_headers.csv  mixed_order.csv
src/: lib.rs
src/analysis/: mod.rs
src/clustering/: mod.rs
src/clustering/affinity_propagation/: algorithm.rs  config.rs  mod.rs
src/clustering/dbscan/: algorithm.rs  config.rs  mod.rs  spatial.rs
src/clustering/gmm/: algorithm.rs  config.rs  mod.rs
src/clustering/hierarchical/: algorithm.rs  config.rs  mod.rs
src/clustering/kmeans/: algorithm.rs  config.rs  mod.rs  parallel.rs
src/clustering/kmeans/tests/: bench_kmeans.rs  integration_tests.rs  property_tests.rs  unit_tests.rs
src/clustering/som/: algorithm.rs  config.rs  mod.rs
src/core/: data_loader.rs  data_models.rs  data_validator.rs  mod.rs  traits.rs
src/performance/: mod.rs
src/trading/: mod.rs  performance.rs  signals.rs  strategies.rs  vwap.rs
src/utils/: mod.rs
